refactor: Change of formatting in PrivateHirePageHtml.html

--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -40,11 +40,25 @@
       in touch to arrange your private screening, and provide an upfront quote
       so you know the exact price you pay, right from the start!
       <form class="PHContactForm">
-        <div class="PHFormElement"><Label>Name</Label><input class="PHFormInput"></input></div>
-        <div class="PHFormElement"><Label>Email</Label><input class="PHFormInput type="email"></input></div>
-        <div class="PHFormElement"><Label>Phone Number</Label><input class="PHFormInput type="number"></input></div>
-        <div class="PHFormElement"><Label>Do you give Picture House Cinemas permission to contact you regarding your private hire request?</Label><input class="PHFormInput" type="checkbox"></input></div>
-        <div class="PHFormElement"><Label><input type="submit"></input></div>
+        <div class="PHFormElement">
+          <Label>Name</Label>
+          <input class="PHFormInput"></input>
+        </div>
+        <div class="PHFormElement">
+          <Label>Phone Number</Label>
+          <input class="PHFormInput type="number"></input>
+        </div>
+        <div class="PHFormElement">
+          <Label>Email</Label>
+          <input class="PHFormInput type="email"></input>
+        </div>
+        <div class="PHFormElement">
+          <Label>Do you give Picture House Cinemas permission to contact you regarding your private hire request?</Label>
+          <input class="PHFormInput" type="checkbox"></input>
+        </div>
+        <div class="PHFormElement">
+          <input type="submit"></input>
+        </div>
       </form>
     </div>
   </div>
