refactor: Adjustment of formatting in PrivateHirePageHtml.html

--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <title>Private Hire Page</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <link
+  <head>
+    <title>Private Hire Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     /> -->
-  <link rel="stylesheet" type="text/css" href="./PrivateHirePage.css" />
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./PrivateHirePage.css" />
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
-</head>
+  </head>
 
-<body>
-  <!-- <div class="container-fluid">
+  <body>
+    <!-- <div class="container-fluid">
       <div class="Container">
         <label for="formControlInput" class="form-label">Email address</label>
         <input
@@ -26,42 +25,44 @@
         />
       </div>
     </div> -->
-  <div class="PrivateHirePage">
-    <div class="Introduction">
-      At Picture House, we are more than just a cinema - we're entertainment
-      providers! In order to elevate the experience that our customers have,
-      we offer Private Hire Services! <br /><br />
-      There's nothing better than the comfort of choosing your own movie to
-      relax to - so why not experience this with friends, family or corporate
-      colleagues?
+    <div class="PrivateHirePage">
+      <div class="Introduction">
+        At Picture House, we are more than just a cinema - we're entertainment
+        providers! In order to elevate the experience that our customers have,
+        we offer Private Hire Services! <br /><br />
+        There's nothing better than the comfort of choosing your own movie to
+        relax to - so why not experience this with friends, family or corporate
+        colleagues?
+      </div>
+      <div class="AskForContactDetails">
+        Please fill out the form below to request more information and we'll be
+        in touch to arrange your private screening, and provide an upfront quote
+        so you know the exact price you pay, right from the start!
+        <form class="PHContactForm">
+          <div class="PHFormElement">
+            <label>Name</label>
+            <input class="PHFormInput" />
+          </div>
+          <div class="PHFormElement">
+            <label>Phone Number</label>
+            <input class="PHFormInput type="number" />
+          </div>
+          <div class="PHFormElement">
+            <label>Email</label>
+            <input class="PHFormInput type="email" />
+          </div>
+          <div class="PHFormElement">
+            <label
+              >Do you give Picture House Cinemas permission to contact you
+              regarding your private hire request?</label
+            >
+            <input class="PHFormInput" type="checkbox" />
+          </div>
+          <div class="PHFormElement">
+            <input type="submit" />
+          </div>
+        </form>
+      </div>
     </div>
-    <div class="AskForContactDetails">
-      Please fill out the form below to request more information and we'll be
-      in touch to arrange your private screening, and provide an upfront quote
-      so you know the exact price you pay, right from the start!
-      <form class="PHContactForm">
-        <div class="PHFormElement">
-          <Label>Name</Label>
-          <input class="PHFormInput"></input>
-        </div>
-        <div class="PHFormElement">
-          <Label>Phone Number</Label>
-          <input class="PHFormInput type="number"></input>
-        </div>
-        <div class="PHFormElement">
-          <Label>Email</Label>
-          <input class="PHFormInput type="email"></input>
-        </div>
-        <div class="PHFormElement">
-          <Label>Do you give Picture House Cinemas permission to contact you regarding your private hire request?</Label>
-          <input class="PHFormInput" type="checkbox"></input>
-        </div>
-        <div class="PHFormElement">
-          <input type="submit"></input>
-        </div>
-      </form>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
