--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -21,27 +21,34 @@
         in touch to arrange your private screening, and provide an upfront quote
         so you know the exact price you pay, right from the start!
         <form class="PHContactForm">
-          <div class="PHFormElement">
-            <label>Name</label>
-            <input class="PHFormInput" />
+          <div class="PHMainInputs">
+            <div class="PHFormElement">
+              <label>Name</label>
+              <br />
+              <input class="PHFormInput" />
+            </div>
+            <div class="PHFormElement">
+              <label>Phone Number</label>
+              <br />
+              <input />
+            </div>
+            <div class="PHFormElement">
+              <label>Email</label>
+              <br />
+              <input type="email" />
+            </div>
           </div>
-          <div class="PHFormElement">
-            <label>Phone Number</label>
-            <input class="PHFormInput type="number" />
-          </div>
-          <div class="PHFormElement">
-            <label>Email</label>
-            <input class="PHFormInput type="email" />
-          </div>
-          <div class="PHFormElement">
-            <label
-              >Do you give Picture House Cinemas permission to contact you
-              regarding your private hire request?</label
-            >
-            <input class="PHFormInput" type="checkbox" />
-          </div>
-          <div class="PHFormElement">
-            <input type="submit" />
+          <div class="PHPermissionAndSubmit">
+            <div class="PHPermission">
+              <label
+                >Do you give Picture House Cinemas permission to contact you
+                regarding your private hire request?</label
+              >
+              <input type="checkbox" />
+            </div>
+            <div class="PHFormElement">
+              <input type="submit" />
+            </div>
           </div>
         </form>
       </div>
