wip: Adjustments to HTML and CSS for Private Hire Page to allow for Form Component

--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -20,37 +20,39 @@
         Please fill out the form below to request more information and we'll be
         in touch to arrange your private screening, and provide an upfront quote
         so you know the exact price you pay, right from the start!
-        <form class="PHContactForm">
-          <div class="PHMainInputs">
-            <div class="PHFormElement">
-              <label>Name</label>
-              <br />
-              <input class="PHFormInput" />
+        <div class="card">
+          <form class="PHContactForm">
+            <div class="PHMainInputs">
+              <div class="PHFormElement">
+                <label>Name</label>
+                <br />
+                <input class="PHFormInput" />
+              </div>
+              <div class="PHFormElement">
+                <label>Phone Number</label>
+                <br />
+                <input />
+              </div>
+              <div class="PHFormElement">
+                <label>Email</label>
+                <br />
+                <input type="email" />
+              </div>
             </div>
-            <div class="PHFormElement">
-              <label>Phone Number</label>
-              <br />
-              <input />
+            <div class="PHPermissionAndSubmit">
+              <div class="PHPermission">
+                <label
+                  >Do you give Picture House Cinemas permission to contact you
+                  regarding your private hire request?</label
+                >
+                <input type="checkbox" />
+              </div>
+              <div class="PHFormElement">
+                <input type="submit" />
+              </div>
             </div>
-            <div class="PHFormElement">
-              <label>Email</label>
-              <br />
-              <input type="email" />
-            </div>
-          </div>
-          <div class="PHPermissionAndSubmit">
-            <div class="PHPermission">
-              <label
-                >Do you give Picture House Cinemas permission to contact you
-                regarding your private hire request?</label
-              >
-              <input type="checkbox" />
-            </div>
-            <div class="PHFormElement">
-              <input type="submit" />
-            </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </body>
