feat: Add how does it work section to Private Hire page as well as css adjustments

--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -8,50 +8,80 @@
 
   <body>
     <div class="PrivateHirePage">
-      <div class="Introduction">
-        At Picture House, we are more than just a cinema - we're entertainment
-        providers! In order to elevate the experience that our customers have,
-        we offer Private Hire Services! <br /><br />
-        There's nothing better than the comfort of choosing your own movie to
-        relax to - so why not experience this with friends, family or corporate
-        colleagues?
+      <div class="card">
+        <div class="Introduction">
+          <h1>Private Hire At Picture House</h1>
+          At Picture House, we are more than just a cinema - we're entertainment
+          providers! In order to elevate the experience that our customers have,
+          we offer Private Hire Services! <br /><br />
+          There's nothing better than the comfort of choosing your own movie to
+          relax to - so why not experience this with friends, family or
+          corporate colleagues?
+        </div>
       </div>
-      <div class="AskForContactDetails">
-        Please fill out the form below to request more information and we'll be
-        in touch to arrange your private screening, and provide an upfront quote
-        so you know the exact price you pay, right from the start!
-        <div class="card">
-          <form class="PHContactForm">
-            <div class="PHMainInputs">
-              <div class="PHFormElement">
-                <label>Name</label>
-                <br />
-                <input class="PHFormInput" />
+      <div class="card">
+        <h2>How does it work?</h2>
+        The private hire service is designed to give <b>you</b> full control of
+        your cinema experience. You will be able to choose from a variety of
+        options including: location, cinema size, movie as well as the day and
+        time of your screening. <br /><br />
+        Please note: Certain options will affect your quote due to the affect of
+        cost to business (e.g. time and day of hire)
+      </div>
+      <div class="card">
+        <div class="AskForContactDetails">
+          <h2>Get your free, no obligation quote!</h2>
+          Please fill out the form below to request more information and we'll
+          be in touch to arrange your private screening, and provide an upfront
+          quote so you know the exact price you pay, right from the start!
+          <div class="card">
+            <form class="PHContactForm">
+              <div class="PHMainInputs">
+                <div class="PHFormElement">
+                  <label>Name</label>
+                  <br />
+                  <div class="PHFormInput">
+                    <input />
+                  </div>
+                </div>
+                <div class="PHFormElement">
+                  <label>Phone Number</label>
+                  <br />
+                  <div class="PHFormInput">
+                    <input />
+                  </div>
+                </div>
+                <div class="PHFormElement">
+                  <label>Email</label>
+                  <br />
+                  <div class="PHFormInput">
+                    <input type="email" />
+                  </div>
+                </div>
               </div>
               <div class="PHFormElement">
-                <label>Phone Number</label>
-                <br />
-                <input />
+                <div class="PHTextArea">
+                  <label>Special Requests/Booking Notes</label>
+                  <br />
+                  <div class="PHFormInput">
+                    <textarea spellcheck="true" cols="100" rows="6"></textarea>
+                  </div>
+                </div>
               </div>
-              <div class="PHFormElement">
-                <label>Email</label>
-                <br />
-                <input type="email" />
+              <div class="PHPermissionAndSubmit">
+                <div class="PHPermission">
+                  <label
+                    >Do you give Picture House Cinemas permission to contact you
+                    regarding your private hire request?</label
+                  >
+                  <input type="checkbox" />
+                </div>
+                <div class="PHFormElement">
+                  <input type="submit" />
+                </div>
               </div>
-            </div>
-            <div class="PHPermissionAndSubmit">
-              <div class="PHPermission">
-                <label
-                  >Do you give Picture House Cinemas permission to contact you
-                  regarding your private hire request?</label
-                >
-                <input type="checkbox" />
-              </div>
-              <div class="PHFormElement">
-                <input type="submit" />
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </div>
