--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -4,6 +4,11 @@
     <title>Private Hire Page</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="./PrivateHirePage.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./Components/ImageRotation/ImageRotation.css"
+    />
   </head>
 
   <body>
@@ -27,6 +32,23 @@
         time of your screening. <br /><br />
         Please note: Certain options will affect your quote due to the affect of
         cost to business (e.g. time and day of hire)
+
+        <div class="image-container">
+          <img
+            src="./Components/Images/cinema1.jpg"
+            alt="Image of Cinema Screen One"
+          />
+          <img
+            src="./Components/Images/cinema2.jpg"
+            alt="Image of Cinema Screen Two"
+          />
+          <img
+            src="./Components/Images/cinema3.jpg"
+            alt="Image of Cinema Concession Stand"
+          />
+        </div>
+
+        <script src="./Components/ImageRotation/ImageRotation.js"></script>
       </div>
       <div class="card">
         <div class="AskForContactDetails">
