wip: Temporary addition of manually placed images until I can get the rotation working

--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -33,7 +33,23 @@
         Please note: Certain options will affect your quote due to the affect of
         cost to business (e.g. time and day of hire)
 
-        <div class="image-container">
+        <div class="card">
+          <img
+            src="./Components/Images/cinema1.jpg"
+            alt="Image of Cinema One"
+          />
+
+          <img
+            src="./Components/Images/cinema2.jpg"
+            alt="Image of Cinema Two"
+          />
+
+          <img
+            src="./Components/Images/cinema3.jpg"
+            alt="Image of Concession Stand"
+          />
+        </div>
+        <!-- <div class="image-container">
           <img
             src="./Components/Images/cinema1.jpg"
             alt="Image of Cinema Screen One"
@@ -46,9 +62,9 @@
             src="./Components/Images/cinema3.jpg"
             alt="Image of Cinema Concession Stand"
           />
-        </div>
+        </div> -->
 
-        <script src="./Components/ImageRotation/ImageRotation.js"></script>
+        <!-- <script src="./Components/ImageRotation/ImageRotation.js"></script> -->
       </div>
       <div class="card">
         <div class="AskForContactDetails">
