--- a/HomePage/home_page.html
+++ b/HomePage/home_page.html
@@ -12,7 +12,7 @@
 
     <main>
       <!-- This code defines a container div with a slider. -->
-
+<p>delete me</p>
       <div class="container">
         <!-- This slider has 5 radio buttons, each with a unique ID (s1-s5) and the same name (slider).
        The radio buttons are hidden using the "d-none" class. -->
