refactor: Removal of un-needed <p>

--- a/HomePage/home_page.html
+++ b/HomePage/home_page.html
@@ -6,13 +6,10 @@
     <script src="home_page.js"></script>
   </head>
   <body>
-    <header>
-
-    </header>
+    <header></header>
 
     <main>
       <!-- This code defines a container div with a slider. -->
-<p>delete me</p>
       <div class="container">
         <!-- This slider has 5 radio buttons, each with a unique ID (s1-s5) and the same name (slider).
        The radio buttons are hidden using the "d-none" class. -->
@@ -130,13 +127,9 @@
           </select>
           <!-- This link contains a button for booking now with a class of "Book Now". -->
 
-          <a href="/Book_now"
-            ><button >Book Now</button></a
-          >
+          <a href="/Book_now"><button>Book Now</button></a>
         </div>
       </section>
     </main>
-
-    
   </body>
 </html>
