--- a/SharedComponentsLibrary/NavBar/NavBar_Divider.html
+++ b/SharedComponentsLibrary/NavBar/NavBar_Divider.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: grey;">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="NavBar_Divider.css">
+<html lang="en" style="background-color: grey">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="NavBar_Divider.css" />
     <title>Document</title>
-    <H1 style="color: beige;">This is the Word</H1>
+    <h1 style="color: beige">This is the Word</h1>
 
     <nav>
-        <ul class="navbar-list">
-            <li>
-                <a class="nav-link" href="/">Home</a>
-                <a class="nav-link" href="/">Membership</a>
-                <a class="nav-link" href="/">Contact Us</a>
-                <a class="nav-link" href="/">Private Hire</a>
-            </li>
-        </ul>
+      <ul class="navbar-list">
+        <li>
+          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/">Membership</a>
+          <a class="nav-link" href="/">Contact Us</a>
+          <a class="nav-link" href="/">Private Hire</a>
+        </li>
+      </ul>
     </nav>
 
     <div class="container-divider">
-        <div class="line">
-            <span class="dot"></span>
-        </div>
+      <div class="line">
+        <span class="dot"></span>
+      </div>
     </div>
-
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
