--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Private Hire Cinema Rooms</title>
     <link rel="stylesheet" href="PrivateHirePage.css" />
+    <link
+      rel="stylesheet"
+      href="../SharedComponentsLibrary//CSS Files/card.css"
+    />
   </head>
   <body>
     <header>
@@ -18,86 +22,102 @@
       </nav>
     </header>
     <main>
-      <section id="hero">
-        <h1>Private Hire Cinema Rooms</h1>
-        <p>Experience movies like never before!</p>
-      </section>
-      <section id="about">
-        <h2>About</h2>
-        <p>
-          Our private hire cinema rooms offer an exclusive movie experience for
-          groups of up to 10 people. With comfortable seating, a
-          state-of-the-art sound system, and a high-quality projector, you can
-          enjoy your favorite movies in style.
-        </p>
-      </section>
-      <section id="rooms">
-        <h2>Rooms</h2>
-        <ul>
-          <li>
-            <h3>Room 1</h3>
-            <p>Capacity: 10 people</p>
-            <p>
-              Features: Comfortable seating, high-quality projector, and sound
-              system
-            </p>
-          </li>
-          <li>
-            <h3>Room 2</h3>
-            <p>Capacity: 10 people</p>
-            <p>
-              Features: Comfortable seating, high-quality projector, and sound
-              system
-            </p>
-          </li>
-          <li>
-            <h3>Room 3</h3>
-            <p>Capacity: 10 people</p>
-            <p>
-              Features: Comfortable seating, high-quality projector, and sound
-              system
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section id="booking">
-        <h2>Booking</h2>
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
-
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-
-          <label for="room">Room:</label>
-          <select id="room" name="room" required>
-            <option value="">--Select a room--</option>
-            <option value="Room 1">Room 1</option>
-            <option value="Room 2">Room 2</option>
-            <option value="Room 3">Room 3</option>
-          </select>
-
-          <label for="date">Date:</label>
-          <input type="date" id="date" name="date" required />
-
-          <label for="time">Time:</label>
-          <input type="time" id="time" name="time" required />
-
-          <button type="submit">Book Now</button>
-        </form>
-        <div class="modal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="modal-body">
-              <p>Name:</p>
-              <p>Email:</p>
-              <p>Room:</p>
-              <p>Date:</p>
-              <p>Time:</p>
-            </div>
+      <div class="card">
+        <div class="card-header">
+          <div class="card-title">
+            <h1>Private Hire Cinema Rooms</h1>
           </div>
         </div>
-      </section>
+        <div class="card-body">
+          <section id="hero">
+            <p>Experience movies like never before!</p>
+          </section>
+          <h2>About</h2>
+          <section id="about">
+            <p>
+              Our private hire cinema rooms offer an exclusive movie experience
+              for groups of up to 10 people. With comfortable seating, a
+              state-of-the-art sound system, and a high-quality projector, you
+              can enjoy your favorite movies in style.
+            </p>
+          </section>
+          <h2>Rooms</h2>
+          <section id="rooms">
+            <ul>
+              <li>
+                <h3>Room 1</h3>
+                <p>Capacity: 10 people</p>
+                <p>
+                  Features: Comfortable seating, high-quality projector, and
+                  sound system
+                </p>
+              </li>
+              <li>
+                <h3>Room 2</h3>
+                <p>Capacity: 10 people</p>
+                <p>
+                  Features: Comfortable seating, high-quality projector, and
+                  sound system
+                </p>
+              </li>
+              <li>
+                <h3>Room 3</h3>
+                <p>Capacity: 10 people</p>
+                <p>
+                  Features: Comfortable seating, high-quality projector, and
+                  sound system
+                </p>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header">
+          <div class="card-title">
+            <h2>Booking</h2>
+          </div>
+        </div>
+        <div class="card-body">
+          <section id="booking">
+            <form>
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="name" required />
+
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required />
+
+              <label for="room">Room:</label>
+              <select id="room" name="room" required>
+                <option value="">--Select a room--</option>
+                <option value="Room 1">Room 1</option>
+                <option value="Room 2">Room 2</option>
+                <option value="Room 3">Room 3</option>
+              </select>
+
+              <label for="date">Date:</label>
+              <input type="date" id="date" name="date" required />
+
+              <label for="time">Time:</label>
+              <input type="time" id="time" name="time" required />
+
+              <button type="submit">Book Now</button>
+            </form>
+            <div class="modal">
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <div class="modal-body">
+                  <p>Name:</p>
+                  <p>Email:</p>
+                  <p>Room:</p>
+                  <p>Date:</p>
+                  <p>Time:</p>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
       <section id="contact">
         <h2>Contact</h2>
         <p>Phone: 555-1234</p>
