changes to Private Hire page

--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -26,23 +26,15 @@
         <h1>Private Hire Cinema Rooms</h1>
         <p>Experience movies like never before!</p>
       </section>
-      <div class="card">
-        <section id="about">
-          <div class="card-header">
-            <div class="card-title">
-              <h2>About</h2>
-            </div>
-          </div>
-          <div class="card-body">
-            <p>
-              Our private hire cinema rooms offer an exclusive movie experience
-              for groups of up to 10 people. With comfortable seating, a
-              state-of-the-art sound system, and a high-quality projector, you
-              can enjoy your favorite movies in style.
-            </p>
-          </div>
-        </section>
-      </div>
+      <section id="about">
+        <h2>About</h2>
+        <p>
+          Our private hire cinema rooms offer an exclusive movie experience for
+          groups of up to 10 people. With comfortable seating, a
+          state-of-the-art sound system, and a high-quality projector, you can
+          enjoy your favorite movies in style.
+        </p>
+      </section>
       <section id="rooms">
         <h2>Rooms</h2>
         <div class="roomCards">
