changes to Private Hire page

--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -26,62 +26,70 @@
         <h1>Private Hire Cinema Rooms</h1>
         <p>Experience movies like never before!</p>
       </section>
-      <section id="about">
-        <h2>About</h2>
-        <p>
-          Our private hire cinema rooms offer an exclusive movie experience for
-          groups of up to 10 people. With comfortable seating, a
-          state-of-the-art sound system, and a high-quality projector, you can
-          enjoy your favorite movies in style.
-        </p>
-      </section>
-      <section id="rooms">
-        <h2>Rooms</h2>
-        <div class="roomCards">
-          <div class="card" style="width: 18rem">
-            <img
-              src="./Components/Images/cinema1.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">The Classic</h5>
-              <p class="card-text">
-                This screen provides you with the 'classic' and authentic cinema
-                experience.
-              </p>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem">
-            <img
-              src="./Components/Images/cinema2.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">The Luxe</h5>
-              <p class="card-text">
-                This screen provides an elevated sense of luxury to your cinema
-                experience.
-              </p>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem">
-            <img
-              src="./Components/Images/cinema4.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">The Front Room</h5>
-              <p class="card-text">
-                This screen provides a more suitable setting for smaller groups
-                of up to 10 people.
-              </p>
-            </div>
-          </div>
+      <div class="card">
+        <div class="card-body">
+          <section id="about">
+            <h2>About</h2>
+            <p>
+              Our private hire cinema rooms offer an exclusive movie experience
+              for groups of up to 10 people. With comfortable seating, a
+              state-of-the-art sound system, and a high-quality projector, you
+              can enjoy your favorite movies in style.
+            </p>
+          </section>
         </div>
-      </section>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <section id="rooms">
+            <h2>Rooms</h2>
+            <div class="roomCards">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="./Components/Images/cinema1.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">The Classic</h5>
+                  <p class="card-text">
+                    This screen provides you with the 'classic' and authentic
+                    cinema experience.
+                  </p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem">
+                <img
+                  src="./Components/Images/cinema2.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">The Luxe</h5>
+                  <p class="card-text">
+                    This screen provides an elevated sense of luxury to your
+                    cinema experience.
+                  </p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem">
+                <img
+                  src="./Components/Images/cinema4.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h5 class="card-title">The Front Room</h5>
+                  <p class="card-text">
+                    This screen provides a more suitable setting for smaller
+                    groups of up to 10 people.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
       <div class="card">
         <div class="card-header">
           <div class="card-title">
@@ -129,11 +137,16 @@
           </section>
         </div>
       </div>
-      <section id="contact">
-        <h2>Contact</h2>
-        <p>Phone: 028 7042 1298</p>
-        <p>Email: info@picturehousecinema.com</p>
-      </section>
+
+      <div class="card">
+        <div class="card-body">
+          <section id="contact">
+            <h2>Contact</h2>
+            <p>Phone: 028 7042 1298</p>
+            <p>Email: info@picturehousecinema.com</p>
+          </section>
+        </div>
+      </div>
     </main>
     <script src="PrivateHirePage.js"></script>
   </body>
