--- a/SharedComponentsLibrary/WebPageFooter/Footer.html
+++ b/SharedComponentsLibrary/WebPageFooter/Footer.html
@@ -12,7 +12,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="footer-col">
+                <div class="footer-column">
                     <h3>Our Company</h3>
                     <ul class="our-company">
                         <li><a href="#">About Us</a></li>
@@ -23,7 +23,7 @@
                     </ul>
                 </div>
                 
-                <div class="footer-col">
+                <div class="footer-column">
                     <h3>Help</h3>
                     <ul class="help" >
                         <li><a href="#">FAQ's</a></li>
@@ -32,7 +32,7 @@
                     </ul>
                 </div>
 
-                <div class="footer-col">
+                <div class="footer-column">
                     <h3>Follow Us</h3>
                     <div class="socials">
                        
