--- a/BookingPage/PaymentPage.html
+++ b/BookingPage/PaymentPage.html
@@ -5,39 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="PaymentPage.js"></script>
 </head>
 <body>
     <div class="payment-container">
         <h2 class="payment-heading">Enter your payment details</h2>
-        <form>
+        <form onsubmit="confirmPayment()">
           <div class="form-group">
             <label for="name">Name on card:</label>
-            <input type="text" id="name" name="name" placeholder="John Doe">
+            <input type="text" id="name" name="name" placeholder="John Doe" required>
           </div>
           <div class="form-group">
             <label for="card-number">Card number:</label>
-            <input type="text" id="card-number" name="card-number" placeholder="xxxx xxxx xxxx xxxx">
+            <input type="text" id="card-number" name="card-number" placeholder="xxxx xxxx xxxx xxxx" required maxlength="16">
           </div>
           <div class="form-row">
             <div class="form-group form-group-expiration">
               <label for="expiration-date">Expiration date:</label>
-              <input type="text" id="expiration-date" name="expiration-date" placeholder="MM/YY">
+              <input type="text" id="expiration-date" name="expiration-date" placeholder="MM/YY" required maxlength="5">
             </div>
             <div class="form-group form-group-cvv">
               <label for="cvv">CVV:</label>
-              <input type="text" id="cvv" name="cvv" placeholder="xxx">
+              <input type="text" id="cvv" name="cvv" placeholder="xxx" required maxlength="3">
             </div>
           </div>
           <div class="form-group form-group-image">
-            <label for="card-type">Card type:</label>
+            <label for="card-type">Accepted card types:</label>
             <div class="card-images">
-                <a href="http://www.merchantequip.com/information-center/credit-card-logos/"><img
+                <a style="pointer-events: none;" href="http://www.merchantequip.com/information-center/credit-card-logos/"><img
                     src="https://www.merchantequip.com/images/logos/visa-mastercard-211x65.gif" width="211" height="65"
                     alt="Merchant Equipment Store Credit Card Logos"/></a>
                         
             </div>
           </div>
-          <input type="submit" value="Pay Now">
+          <input style="cursor: pointer;" type="submit" value="Pay Now">
         </form>
       </div>
       
