--- a/BookingPage/BookingPage.html
+++ b/BookingPage/BookingPage.html
@@ -28,7 +28,7 @@
 <body>
     <div class="main-body">
        <h2>Please select your tickets(s)</h2>
-       <button class="ticket-button">Adults £8.50</button>
+       <button class="ticket-button">Adult £8.50</button>
        <button class="ticket-button">Child £5</button>
        <button class="ticket-button">Senior £6</button>
        <button class="ticket-button">Student £6.50</button>
