--- a/SharedComponentsLibrary/NavBar/NavBar_Divider.html
+++ b/SharedComponentsLibrary/NavBar/NavBar_Divider.html
@@ -14,7 +14,11 @@
           <a class="nav-link" href="/">Home</a>
           <a class="nav-link" href="/">Membership</a>
           <a class="nav-link" href="/">Contact Us</a>
-          <a class="nav-link" href="/">Private Hire</a>
+          <a
+            class="nav-link"
+            href="../../PrivateHirePage/PrivateHirePageHtml.html"
+            >Private Hire</a
+          >
         </li>
       </ul>
     </nav>
