--- a/PrivateHirePage/PrivateHirePageHtml.html
+++ b/PrivateHirePage/PrivateHirePageHtml.html
@@ -9,17 +9,39 @@
       rel="stylesheet"
       href="../SharedComponentsLibrary//CSS Files/card/card.css"
     />
+    <link
+      rel="stylesheet"
+      href="../SharedComponentsLibrary/NavBar/NavBar_Divider.css"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#rooms">Rooms</a></li>
-          <li><a href="#booking">Booking</a></li>
-          <li><a href="#contact">Contact</a></li>
+        <ul class="navbar-list">
+          <li>
+            <a class="nav-link" href="../../HomePage/home_page.html">Home</a>
+            <a
+              class="nav-link"
+              href="../../MembershipPage/MembershipPageHtml.html"
+              >Membership</a
+            >
+            <a class="nav-link" href="../../ContactPage/contact_us.html"
+              >Contact Us</a
+            >
+            <a
+              class="nav-link"
+              href="../../PrivateHirePage/PrivateHirePageHtml.html"
+              >Private Hire</a
+            >
+          </li>
         </ul>
       </nav>
+
+      <div class="container-divider">
+        <div class="line">
+          <span class="dot" />
+        </div>
+      </div>
     </header>
     <main>
       <section id="hero">
