--- a/SharedComponentsLibrary/NavBar/NavBar_Divider.html
+++ b/SharedComponentsLibrary/NavBar/NavBar_Divider.html
@@ -2,7 +2,10 @@
 <html lang="en" style="background-color: grey">
   <head>
     <!-- COPY THIS LINE TO THE TOP OF YOUR HTML FILE WITH YOUR OTHER <link> TAGS -->
-    <link rel="stylesheet" href="NavBar_Divider.css" />
+    <link
+      rel="stylesheet"
+      href="../SharedComponentsLibrary/NavBar/NavBar_Divider.css"
+    />
 
     <!-- COPY THIS LINE DOWN AND PAST TO THE TOP OF YOUR HTML -->
     <nav>
