wip: commenting to merge develop

--- a/MembershipPage/MembershipPageHtml.html
+++ b/MembershipPage/MembershipPageHtml.html
@@ -1,6 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link
+      rel="stylesheet"
+      href="../SharedComponentsLibrary/NavBar/NavBar_Divider.css"
+    />
+        <nav>
+      <ul class="navbar-list">
+        <li>
+          <a class="nav-link" href="../../HomePage/home_page.html">Home</a>
+          <a
+            class="nav-link"
+            href="../../MembershipPage/MembershipPageHtml.html"
+            >Membership</a
+          >
+          <a class="nav-link" href="../../ContactPage/contact_us.html"
+            >Contact Us</a
+          >
+          <a
+            class="nav-link"
+            href="../../PrivateHirePage/PrivateHirePageHtml.html"
+            >Private Hire</a
+          >
+        </li>
+      </ul>
+    </nav>
+
+    <div class="container-divider">
+      <div class="line">
+        <span class="dot" />
+      </div>
+    </div>
     <title>Picturehouse Membership</title>
     <style>
       body {
@@ -103,16 +133,6 @@
     </style>
   </head>
   <body>
-    <header>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Membership</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Booking</a></li>
-        <li><a href="#">Private Hire</a></li>
-      </ul>
-      <a href="#">Login</a>
-    </header>
     <div class="container">
       <h1>Picturehouse Membership</h1>
       <form>
