--- a/HomePage/home_page.html
+++ b/HomePage/home_page.html
@@ -7,25 +7,22 @@
   </head>
   <body>
     <header>
-      <H1 style="color: beige;">This is the Word</H1>
-
-      <nav class="nav">
-          <ul class="navbar-list">
-              <li>
-                  <a class="nav-link" href="/">Home</a>
-                  <a class="nav-link" href="/">Membership</a>
-                  <a class="nav-link" href="/">Contact Us</a>
-                  <a class="nav-link" href="/">Private Hire</a>
-              </li>
-          </ul>
+      <nav>
+        <ul class="navbar-list">
+          <li>
+            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/">Membership</a>
+            <a class="nav-link" href="/">Contact Us</a>
+            <a class="nav-link" href="/">Private Hire</a>
+          </li>
+        </ul>
       </nav>
   
       <div class="container-divider">
-          <div class="line">
-              <span class="dot"></span>
-          </div>
+        <div class="line">
+          <span class="dot"></span>
+        </div>
       </div>
-
     </header>
 
     <main>
@@ -125,13 +122,11 @@
       <section class="infos" id="text-section">
         <!-- This heading contains the movie title -->
 
-        <h1>Creed |||</h1>
+        <h1>Welcome</h1>
         <!-- This paragraph contains a brief description of the movie's plot. -->
 
         <p>
-          Adonis has been thriving in both his carrer and family life, but when
-          a childhood friend and former boxing prodigy resurfaces, the face-off
-          is more than a fight.
+          Welcome to Picture House!
         </p>
       </section>
       <!-- This section defines a container for news and upcoming events with a class of "News". -->
@@ -234,8 +229,8 @@
           </select>
           <!-- This link contains a button for booking now with a class of "Book Now". -->
 
-          <a href="..//BookingPage/BookingPage.html"
-            ><button style="background-color: #ffeedd">Book Now</button></a
+          <a href="../BookingPage/BookingPage.html"
+            ><button >Book Now</button></a
           >
         </div>
       </section>
@@ -251,6 +246,5 @@
     </main>
 
     <script src="home_page.js"></script>
-
   </body>
 </html>
